<resources>
    <string name="app_name">My Calculator Andr</string>
    <string name="key_1">1</string>
    <string name="key_2">2</string>
    <string name="key_3">3</string>
    <string name="key_4">4</string>
    <string name="key_5">5</string>
    <string name="key_6">6</string>
    <string name="key_7">7</string>
    <string name="key_8">8</string>
    <string name="key_9">9</string>
    <string name="key_0">0</string>
    <string name="key_sign">+/-</string>
    <string name="key_plus">+</string>
    <string name="key_minus">-</string>
    <string name="key_multy">*</string>
    <string name="key_div">/</string>
    <string name="key_equal">=</string>
    <string name="key_dес">.</string>
    <string name="key_back">Back</string>
    <string name="key_clear">C</string>
    <string name="SelectTheme">Выбор темы</string>
    <string name="Default_Theme">По умолчанию</string>
    <string name="Orange_Theme">Оранжевый</string>
    <string name="Purple_Theme">Фиолетовый</string>
</resources>