<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/background">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="20dp"
            android:background="@color/white">

        </FrameLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnCount="4"
            android:minHeight="300dp"
            android:alpha="0.85"
            android:padding="15dp">

            <Button
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="5dp"
                android:background="@android:color/holo_orange_light"
                android:text="@string/key_1"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="5dp"
                android:background="@android:color/holo_orange_light"
                android:text="@string/key_2"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            android:background="@android:color/holo_orange_light"
            android:text="@string/key_3"
            android:textColor="@color/black"
            android:textSize="24sp" />

            <Button
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="5dp"
                android:background="@android:color/holo_red_light"
                android:text="@string/key_back"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            android:background="@android:color/holo_orange_light"
            android:text="@string/key_4"
            android:textColor="@color/black"
            android:textSize="24sp" />

            <Button
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="5dp"
                android:background="@android:color/holo_orange_light"
                android:text="@string/key_5"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            android:background="@android:color/holo_orange_light"
            android:text="@string/key_6"
            android:textColor="@color/black"
            android:textSize="24sp" />

            <Button
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="5dp"
                android:background="@android:color/holo_red_light"
                android:text="@string/key_plus"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            android:background="@android:color/holo_orange_light"
            android:text="@string/key_7"
            android:textColor="@color/black"
            android:textSize="24sp" />

            <Button
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="5dp"
                android:background="@android:color/holo_orange_light"
                android:text="@string/key_8"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            android:background="@android:color/holo_orange_light"
            android:text="@string/key_9"
            android:textColor="@color/black"
            android:textSize="24sp" />

            <Button
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="5dp"
                android:background="@android:color/holo_red_light"
                android:text="@string/key_minus"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="5dp"
                android:background="@android:color/holo_red_light"
                android:text="@string/key_dес"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            android:background="@android:color/holo_orange_light"
            android:text="@string/key_0"
            android:textColor="@color/black"
            android:textSize="24sp" />

            <Button
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="5dp"
                android:background="@android:color/holo_red_light"
                android:text="@string/key_div"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="5dp"
                android:background="@android:color/holo_red_light"
                android:text="@string/key_multi"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="5dp"
                android:background="@android:color/holo_red_light"
                android:text="@string/key_clear"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="5dp"
                android:background="@android:color/holo_red_light"
                android:text="@string/key_sign"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnSpan="2"
                android:layout_columnWeight="1"
                android:layout_margin="5dp"
                android:background="@android:color/holo_red_light"
                android:text="@string/key_equal"
                android:textColor="@color/white"
                android:textSize="24sp" />

        </GridLayout>

    </LinearLayout>
</FrameLayout>
