<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.CalculatorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="20dp"
            android:alpha="0.9"
            android:background="@android:color/background_light">

            <EditText
                android:id="@+id/input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.5"
                android:background="@android:color/holo_blue_light"
                android:hint="56789"
                android:textAlignment="viewEnd"
                android:textColor="@color/black"
                android:textSize="40sp"></EditText>


        </FrameLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.85"
            android:columnCount="4"
            android:minHeight="300dp"
            android:padding="15dp">

            <Button
                android:id="@+id/key_1"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="5dp"

                android:clickable="true"
                android:stateListAnimator="@android:anim/accelerate_decelerate_interpolator"
                android:text="@string/key_1"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/key_2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="5dp"
                android:text="@string/key_2"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/key_3"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="5dp"
                android:text="@string/key_3"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/key_back"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="5dp"
                android:text="@string/key_back"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <Button
                android:id="@+id/key_4"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="5dp"
                android:text="@string/key_4"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/key_5"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="5dp"
                android:text="@string/key_5"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/key_6"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="5dp"
                android:text="@string/key_6"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/key_plus"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="5dp"
                android:text="@string/key_plus"
                android:textColor="@color/black"
                android:textSize="24sp"/>

            <Button
                android:id="@+id/key_7"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="5dp"
                android:text="@string/key_7"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/key_8"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="5dp"
                android:text="@string/key_8"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/key_9"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="5dp"
                android:text="@string/key_9"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/key_minus"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="5dp"
                android:text="@string/key_minus"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/key_dec"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="5dp"
                android:text="@string/key_dес"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/key_0"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="5dp"
                android:text="@string/key_0"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/key_div"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="5dp"
                android:text="@string/key_div"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/key_multy"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="5dp"
                android:text="@string/key_multi"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/key_C"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="5dp"
                android:text="@string/key_clear"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/key_sign"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="5dp"
                android:text="@string/key_sign"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/key_equal"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnSpan="2"
                android:layout_columnWeight="1"
                android:layout_margin="5dp"
                android:text="@string/key_equal"
                android:textColor="@color/white"
                android:textSize="24sp" />

        </GridLayout>

    </LinearLayout>
</FrameLayout>
